// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Model examples default 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div>
        <h4>
          <strong>
            Example 1:
          </strong>
        </h4>
        <span>
          stuff and things and stuff
          <br />
        </span>
        <style
          jsx={true}
        >
          
              div {
                margin-top: 1em;
              }
            
        </style>
      </div>
      <div>
        <h4>
          <strong>
            Example 2:
          </strong>
        </h4>
        <span>
          stuff and things and stuff
          <br />
        </span>
        <style
          jsx={true}
        >
          
              div {
                margin-top: 1em;
              }
            
        </style>
      </div>
      <div>
        <h4>
          <strong>
            Example 3:
          </strong>
        </h4>
        <span>
          stuff and things and stuff
          <br />
        </span>
        <style
          jsx={true}
        >
          
              div {
                margin-top: 1em;
              }
            
        </style>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task Model examples renders a picture 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div>
        <h4>
          <strong>
            Picture:
          </strong>
        </h4>
        <span>
          <img
            alt=""
            role="presentation"
            src="https://images.smarterbalanced.org/content/Documents/Item%20Specs/Math_Item_Specs/Claim1_mathematics_Gr3_specs/media_G3_Math_1F_NF/image007.jpg"
          />
          <br />
        </span>
        <style
          jsx={true}
        >
          
              div {
                margin-top: 1em;
              }
            
        </style>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task Model examples renders formula 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div>
        <h4>
          <strong>
            Example 1:
          </strong>
        </h4>
        <span>
          1/2
          <br />
        </span>
        <style
          jsx={true}
        >
          
              div {
                margin-top: 1em;
              }
            
        </style>
      </div>
    </div>
  </div>
</div>
`;
